fix: increase bottom sheet z-index

--- a/src/app/components/bottom-sheet/bottom-sheet.component.scss
+++ b/src/app/components/bottom-sheet/bottom-sheet.component.scss
@@ -14,7 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 1100;
+    z-index: 99999;
     padding: var(--space-md);
 }
 
